Fixed horizontal overflow with the top alert bar. Added background to alpha-callout and edited format of the jumbotron so text is readable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,75 @@ body {
     font-family: 'Noto Sans', sans-serif;
 }
 
+
+
+/* ---- ALERTS ---- */
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+}
+
+/* ---- ALPHA-CALLOUT ---- */
+
+.alpha-callout-container {
+    height: 100vh;
+
+    background: url("../images/union-jack.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; 
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    position: relative;
+}
+
+/* ---- NEWSLETTER-CALLOUT ---- */
+
+.newsletter-callout-container {
+    height: 100vh;
+
+    background: url("../images/union-jack.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; 
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    position: relative;
+}
+
+/* ---- JUMBOTRON ---- */
+
+.jumbotron {
+    background-color: #000000a8;
+}
+
+.jumbotron-header {
+    color: #fff;
+    font-weight: bold;
+}
+
+.jumbotron p {
+    color: #fff;
+    font-weight: bold;
+}
+
+.jumbotron hr {
+    border-top: 1px solid rgba(255,255,255,.6);
+}
+
+/* ---- BUTTONS ---- */
